@@ -4,6 +4,8 @@ Added Poke F-Function
 
 Add DSK disk info menu
 
+Improve debug console: better refresh, dynamic width??
+
 Fixed PD765 emulation: TODO: add more details here
 
 
